# OOP_MAI4

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Laba4/headlines/: Array.h  Figure.h  Hexagon.h  Octagon.h  Point.h  Triangle.h
Laba4/tests/: test_main.cpp
